Add Scene hiearchy for model loading.

--- a/Syndra-Editor/imgui.ini
+++ b/Syndra-Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1920,1001
+Size=1600,900
 Collapsed=0
 
 [Window][Debug##Default]
@@ -16,7 +16,7 @@ DockId=0x3BC79352,0
 
 [Window][Viewport]
 Pos=372,22
-Size=1176,979
+Size=891,878
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -27,10 +27,10 @@ Collapsed=0
 DockId=0x3BC79352,0
 
 [Window][Properties]
-Pos=1550,22
-Size=370,979
+Pos=1265,22
+Size=335,878
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000011,0
 
 [Window][scene hierarchy]
 Pos=0,22
@@ -39,10 +39,10 @@ Collapsed=0
 DockId=0x3BC79352,0
 
 [Window][Dear ImGui Demo]
-Pos=1550,22
-Size=370,979
+Pos=1265,22
+Size=335,878
 Collapsed=0
-DockId=0x00000008,2
+DockId=0x00000011,2
 
 [Window][Dear ImGui Style Editor]
 ViewportPos=1010,63
@@ -117,7 +117,7 @@ Collapsed=0
 
 [Window][Scene hierarchy]
 Pos=0,22
-Size=370,443
+Size=370,397
 Collapsed=0
 DockId=0x00000001,0
 
@@ -137,26 +137,26 @@ Size=667,157
 Collapsed=0
 
 [Window][Renderer info]
-ViewportPos=1711,882
+ViewportPos=1543,805
 ViewportId=0x40149A55
 Size=370,217
 Collapsed=0
 
 [Window][Camera settings]
-Pos=0,467
-Size=370,165
+Pos=0,421
+Size=370,148
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Style editor]
-Pos=1550,22
-Size=370,979
+Pos=1265,22
+Size=335,878
 Collapsed=0
-DockId=0x00000008,1
+DockId=0x00000011,1
 
 [Window][Scene settings]
-Pos=0,467
-Size=370,165
+Pos=0,421
+Size=370,148
 Collapsed=0
 DockId=0x00000003,1
 
@@ -194,8 +194,8 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][Renderer settings]
-Pos=0,634
-Size=370,367
+Pos=0,571
+Size=370,329
 Collapsed=0
 DockId=0x00000007,0
 
@@ -203,6 +203,24 @@ DockId=0x00000007,0
 Pos=88,315
 Size=593,436
 Collapsed=0
+
+[Window][Normal]
+Pos=1265,461
+Size=335,439
+Collapsed=0
+DockId=0x00000010,0
+
+[Window][Position]
+Pos=1518,503
+Size=402,498
+Collapsed=0
+DockId=0x00000012,0
+
+[Window][Albedo]
+Pos=1518,515
+Size=402,486
+Collapsed=0
+DockId=0x0000000E,0
 
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
@@ -243,18 +261,24 @@ Column 4  Weight=1.0000
 Column 5  Weight=1.0000
 
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,51 Size=1920,979 Split=X Selected=0xE927CF2F
-  DockNode        ID=0x00000004 Parent=0x3BC79352 SizeRef=1548,878 Split=X
-    DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=370,878 Split=Y Selected=0x1899F4AF
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=233,201 Size=1600,878 Split=X Selected=0xE927CF2F
+  DockNode        ID=0x00000004 Parent=0x3BC79352 SizeRef=1516,878 Split=X
+    DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=396,878 Split=Y Selected=0x1899F4AF
       DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=370,397 Selected=0x1899F4AF
       DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=370,479 Split=Y Selected=0xBEE3B50C
         DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=370,148 Selected=0x7E54A4F7
         DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=370,329 Selected=0x24E47430
-    DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=1176,878 Split=Y Selected=0x995B0CF8
+    DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=1118,878 Split=Y Selected=0x995B0CF8
       DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=918,52 Selected=0xEADA6660
       DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=918,824 Split=Y Selected=0x995B0CF8
         DockNode  ID=0x0000000B Parent=0x0000000A SizeRef=816,41 Selected=0x5E237E06
         DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=816,835 CentralNode=1 Selected=0x995B0CF8
-  DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=370,878 Selected=0xC89E3217
+  DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=402,878 Split=Y Selected=0xC89E3217
+    DockNode      ID=0x0000000D Parent=0x00000008 SizeRef=370,491 Split=Y Selected=0xC89E3217
+      DockNode    ID=0x0000000F Parent=0x0000000D SizeRef=514,487 Split=Y Selected=0xC89E3217
+        DockNode  ID=0x00000011 Parent=0x0000000F SizeRef=497,479 Selected=0xC89E3217
+        DockNode  ID=0x00000012 Parent=0x0000000F SizeRef=497,498 Selected=0xBF5A86A3
+      DockNode    ID=0x00000010 Parent=0x0000000D SizeRef=514,490 Selected=0x26296DD2
+    DockNode      ID=0x0000000E Parent=0x00000008 SizeRef=370,486 Selected=0x2AAB060F
 DockSpace         ID=0xA086D808 Pos=68,197 Size=688,908 CentralNode=1 Selected=0xBF1291F8
 
